# post-machine

./: .gitignore  CMakeLists.txt  GUIDE.md  LICENSE  PKGBUILD  README.md  command.cpp  command.hpp  conanfile.txt  main.cpp  postmachine.cpp  postmachine.hpp  postmachinecontroller.cpp  postmachinecontroller.hpp  postmachinemodel.cpp  postmachinemodel.hpp  postmachineview.cpp  postmachineview.hpp  postmachineview.ui  tape.cpp  tape.hpp  tapewidget.cpp  tapewidget.hpp  translate.ts
.github/workflows/: build mac.yml  build.yml  release linux.yml  release mac.yml  release windows.yml  release.yml
data/: Info.plist  PostMachine.desktop  info.rc  postmachine.icns  recources.qrc
locale/: uk_UA.ts
locales/: postmachine.en_US.ts  postmachine.uk_UA.ts
src/: command.cpp  command.hpp  main.cpp  postmachine.cpp  postmachine.hpp  postmachinecontroller.cpp  postmachinecontroller.hpp  postmachinemodel.cpp  postmachinemodel.hpp  postmachineview.cpp  postmachineview.hpp  postmachineview.ui  tape.cpp  tapewidget.cpp  tapewidget.hpp
